<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:hint="@string/input_new_folder_name"
            android:ems="10"
            android:singleLine="true">

        <requestFocus/>
    </EditText>

    <RadioGroup
            android:id="@+id/new_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="gone">

        <RadioButton
                android:id="@+id/radioNewFolder"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/create_folder"/>

        <RadioButton
                android:id="@+id/radioNewFile"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/create_file"/>

    </RadioGroup>

</LinearLayout>