<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/clipboard"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/clipboard_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/clip_title_marginTop"
                android:layout_marginTop="@dimen/clip_title_marginTop"
                android:ems="10"
                android:gravity="center"
                android:text="@string/clipboard"
                android:textColor="@color/white"
                android:textSize="@dimen/clipboard_title_textsize">
        </TextView>

    </LinearLayout>

    <ListView
            android:id="@+id/clip_history_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/clipboard_content_background"
            android:clickable="true"
            android:scrollbarStyle="insideOverlay"/>

    <LinearLayout
            android:id="@+id/clipActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/clip_action_paddingTop"
            android:orientation="horizontal">

        <Button
                android:id="@+id/clearAll"
                android:layout_width="@dimen/clip_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/light_gray"
                android:layout_margin="4dp"
                android:text="@string/clearAll"/>
        <Button
                android:id="@+id/close"
                android:layout_width="@dimen/clip_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/light_gray"
                android:layout_margin="4dp"
                android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>